Fixed a bug with the slider overflowing on a burger menu with an extension less than 992px

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1410,6 +1410,12 @@ h4 {
     margin-right: -9rem;
   }
 }
+@media (max-width: 992px) {
+  .header .burger {
+    position: relative;
+    z-index: 10;
+  }
+}
 @media (max-width: 991px) {
   .header .burger {
     cursor: pointer;
